# scripty

./: CMakeLists.txt  README.md
src/: errors.c  errors.h  exec.c  exec.h  main.c  operations.c  operations.h  tests.cpp  utils.c  utils.h  values.c  values.h
